[gd_scene load_steps=10 format=3 uid="uid://cnyo8q1t475w6"]

[ext_resource type="Texture2D" uid="uid://cdvqfoaf2fmfq" path="res://addons/attachmentgui/Sprites/button01.png" id="1_rb5mb"]
[ext_resource type="Script" path="res://addons/attachmentgui/attachment_gui_dock_control.gd" id="1_rn36r"]
[ext_resource type="PackedScene" uid="uid://054muqtx37p3" path="res://addons/attachmentgui/Scenes/CreatureCreate.tscn" id="2_6gnth"]
[ext_resource type="LabelSettings" uid="uid://drwy0e5elc4qn" path="res://addons/attachmentgui/attachment_gui_mainlabel.tres" id="4_3i1o5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i810g"]
bg_color = Color(0.129412, 0.145098, 0.168627, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mdbwr"]
bg_color = Color(0.109804, 0.121569, 0.145098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h4040"]
bg_color = Color(0.176471, 0.196078, 0.223529, 1)

[sub_resource type="LabelSettings" id="LabelSettings_v55td"]
font_size = 24
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cc6ja"]
bg_color = Color(0.176471, 0.196078, 0.223529, 1)

[node name="AttachmentGuiDock" type="Control" node_paths=PackedStringArray("new_button", "edit_button", "socket_button", "file_dialog", "path_label", "current_scene_label", "parts_container", "components_container")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -543.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rn36r")
TEMPLATE_SCENE = ExtResource("2_6gnth")
new_button = NodePath("Panel/NewButton")
edit_button = NodePath("Panel/EditButton")
socket_button = NodePath("Panel/SocketButton")
file_dialog = NodePath("FileDialog")
path_label = NodePath("Panel/Path_Label")
current_scene_label = NodePath("Panel/CurrentSceneLabel")
parts_container = NodePath("PartsPanel/ScrollContainer/BoxContainer")
components_container = NodePath("ComponentsPanel/ScrollContainer/BoxContainer")

[node name="FileDialog" type="FileDialog" parent="."]
size = Vector2i(303, 630)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -1.0
offset_bottom = 256.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_i810g")

[node name="NewButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -176.0
offset_top = 92.0
offset_right = -40.0
offset_bottom = 135.0
grow_horizontal = 2
tooltip_text = "Create a new creature!"
theme_override_styles/normal = SubResource("StyleBoxFlat_mdbwr")
text = "New Creature"
icon = ExtResource("1_rb5mb")

[node name="EditButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -178.0
offset_top = 144.0
offset_right = -40.0
offset_bottom = 187.0
grow_horizontal = 2
disabled = true
text = "Edit Creature"
icon = ExtResource("1_rb5mb")

[node name="SocketButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -176.0
offset_top = 199.0
offset_right = -46.0
offset_bottom = 242.0
grow_horizontal = 2
text = "Add Socket"
icon = ExtResource("1_rb5mb")

[node name="SocketButton2" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1.0
offset_top = 144.0
offset_right = 160.0
offset_bottom = 187.0
grow_horizontal = 2
text = "Export Creature"
icon = ExtResource("1_rb5mb")

[node name="Path_Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -31.0
offset_top = 34.0
offset_right = 32.0
offset_bottom = 65.0
grow_horizontal = 2
text = "PATH:"
label_settings = ExtResource("4_3i1o5")
horizontal_alignment = 1
uppercase = true

[node name="GUILABEL" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -95.5
offset_right = 95.5
offset_bottom = 31.0
grow_horizontal = 2
text = "Attachment gui"
label_settings = ExtResource("4_3i1o5")
horizontal_alignment = 1
uppercase = true

[node name="CurrentSceneLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -36.0
offset_top = 61.0
offset_right = 38.0
offset_bottom = 92.0
grow_horizontal = 2
text = "SCENE:"
label_settings = ExtResource("4_3i1o5")
horizontal_alignment = 1
uppercase = true

[node name="PartsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.401
offset_top = 260.0
offset_bottom = 541.152
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h4040")

[node name="ScrollContainer" type="ScrollContainer" parent="PartsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.008
anchor_top = 0.095
anchor_right = 1.0
anchor_bottom = 0.968
offset_left = 0.128
offset_top = -0.19001
offset_right = -7.0
offset_bottom = -1.13608
grow_horizontal = 2
grow_vertical = 2
vertical_scroll_mode = 2

[node name="BoxContainer" type="VBoxContainer" parent="PartsPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PartsPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Parts:"
label_settings = SubResource("LabelSettings_v55td")

[node name="ComponentsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.401
offset_top = 260.0
offset_bottom = 402.152
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cc6ja")

[node name="ScrollContainer" type="ScrollContainer" parent="ComponentsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.993
anchor_bottom = 1.0
offset_top = 39.0
offset_right = 0.263
offset_bottom = 1.0

[node name="BoxContainer" type="VBoxContainer" parent="ComponentsPanel/ScrollContainer"]
clip_contents = true
layout_mode = 2

[node name="Label" type="Label" parent="ComponentsPanel"]
layout_mode = 0
offset_left = 2.0
offset_right = 223.0
offset_bottom = 34.0
text = "Components:"
label_settings = SubResource("LabelSettings_v55td")

[node name="CheckButton" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 508.0
offset_top = 260.0
offset_right = 601.0
offset_bottom = 291.0
text = "Menu"

[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="Panel/NewButton" to="." method="_on_new_button_pressed"]
[connection signal="pressed" from="Panel/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="Panel/SocketButton" to="." method="_on_socket_button_pressed"]
[connection signal="pressed" from="Panel/SocketButton2" to="." method="_on_socket_button_pressed"]
[connection signal="toggled" from="CheckButton" to="." method="_on_check_button_toggled"]
